# SMART-SECOND-BRAIN

./: .gitignore  LEARNING.md  README.md  clear_vector_db.py  demo_document_retriever.py  pyproject.toml  start.sh  start_system.py  stop.sh  stop_system.py  test_openai_connection.py
agentic/core/: conversation_memory.py  knowledge_state.py  redis_checkpointer.py
agentic/prompts/: answer_prompt.txt
agentic/secrets/: .gitkeep
agentic/tools/: document_retriever.py
agentic/workflows/: document_retriever.py  master_graph_builder.py
api/: __init__.py  main.py
api/core/: __init__.py  config.py  database.py  security.py
api/models/: __init__.py  user.py
api/routes/: __init__.py
api/routes/v1/: __init__.py  auth.py  crypto.py  graph_api.py  portfolio.py  users.py
api/schemas/: __init__.py  auth.py  user.py
data/: checkpoints.sqlite-shm  checkpoints.sqlite-wal
frontend/: README.md  app.py  package-lock.json  package.json  pyproject.toml  tailwind.config.js
frontend/src/: style.css
frontend/src/components/: DocumentIngestion.vue  KnowledgeQuery.vue  StatusIcon.vue  SystemHealth.vue
frontend/src/services/: api.ts
frontend/src/stores/: smartBrain.ts
frontend/src/views/: HomeView.vue
shared/utils/: logging_config.py  logging_example.py  pathlib_example.py
tests/test_api/: test_graph_api.py
tests/test_services/: README.md  run_graph_tests.py  test_document_retriever.py  test_master_graph_builder.py
